<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.10</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ispp.project</groupId>
	<artifactId>dondesiempre</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>DondeSiempre</name>
	<description>Base for DondeSiempre ISPP project </description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>25</java.version>
		<maven.build.timestamp.format>yyyy-MM-dd-HHmmss</maven.build.timestamp.format>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>me.paulschwarz</groupId>
				<artifactId>spring-dotenv-bom</artifactId>
				<version>5.1.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>springboot3-dotenv</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>5.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase.ext</groupId>
			<artifactId>liquibase-hibernate6</artifactId>
			<version>5.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-spatial</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.liquibase</groupId>
				<artifactId>liquibase-maven-plugin</artifactId>
				<version>5.0.1</version>
				<configuration>
					<changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
					<diffChangeLogFile>src/main/resources/db/changelog/${maven.build.timestamp}_changelog.yaml</diffChangeLogFile>
					<driver>org.postgresql.Driver</driver>
					<url>jdbc:postgresql://localhost:5434/devmigrdb</url>
					<defaultSchemaName />
					<username>devmigruser</username>
					<password>devmigrpass</password>
					<referenceUrl>hibernate:spring:ispp.project.dondesiempre.models?dialect=org.hibernate.dialect.PostgreSQLDialect
						&amp;hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
						&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
					</referenceUrl>
					<diffExcludeObjects>table:spatial_ref_sys, view:geography_columns, view:geometry_columns</diffExcludeObjects>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.liquibase.ext</groupId>
						<artifactId>liquibase-hibernate6</artifactId>
						<version>5.0.1</version>
						<exclusions>
							<exclusion>
								<groupId>org.hibernate.orm</groupId>
								<artifactId>*</artifactId>
							</exclusion>
						</exclusions>
					</dependency>
					<dependency>
						<groupId>org.hibernate.orm</groupId>
						<artifactId>hibernate-core</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate.orm</groupId>
						<artifactId>hibernate-spatial</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>org.hibernate.orm</groupId>
						<artifactId>hibernate-envers</artifactId>
						<version>${hibernate.version}</version>
					</dependency>
					<dependency>
						<groupId>org.postgresql</groupId>
						<artifactId>postgresql</artifactId>
						<version>${postgresql.version}</version>
					</dependency>
					<dependency>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-data-jpa</artifactId>
						<version>${project.parent.version}</version>
					</dependency>
					<dependency>
						<groupId>jakarta.validation</groupId>
						<artifactId>jakarta.validation-api</artifactId>
						<version>3.1.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<!-- Linter -->
			 <plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<ratchetFrom>origin/main</ratchetFrom>
					<java>
					<googleJavaFormat>
						<style>GOOGLE</style> <!-- o AOSP -->
					</googleJavaFormat>
					<removeUnusedImports/>
					<trimTrailingWhitespace/>
					<endWithNewline/>
					</java>
				</configuration>
				<executions>
					<execution>
					<goals>
						<goal>check</goal> <!-- falla el build si hay diff -->
					</goals>
					<phase>verify</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>test</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.liquibase</groupId>
						<artifactId>liquibase-maven-plugin</artifactId>
						<version>5.0.1</version>
						<configuration>
							<changeLogFile>src/main/resources/db/changelog/db.changelog-master.yaml</changeLogFile>
							<diffChangeLogFile>src/main/resources/db/changelog/${maven.build.timestamp}_changelog.yaml</diffChangeLogFile>
							<driver>org.postgresql.Driver</driver>
							<url>jdbc:postgresql://localhost:5433/testdb</url>
							<defaultSchemaName />
							<username>testuser</username>
							<password>testpass</password>
							<referenceUrl>hibernate:spring:ispp.project.dondesiempre.models?dialect=org.hibernate.dialect.PostgreSQLDialect
								&amp;hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
								&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
							</referenceUrl>
							<diffExcludeObjects>table:spatial_ref_sys, view:geography_columns, view:geometry_columns</diffExcludeObjects>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.liquibase.ext</groupId>
								<artifactId>liquibase-hibernate6</artifactId>
								<version>5.0.1</version>
								<exclusions>
									<exclusion>
										<groupId>org.hibernate.orm</groupId>
										<artifactId>*</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
							<dependency>
								<groupId>org.hibernate.orm</groupId>
								<artifactId>hibernate-core</artifactId>
								<version>${hibernate.version}</version>
							</dependency>
							<dependency>
								<groupId>org.hibernate.orm</groupId>
								<artifactId>hibernate-spatial</artifactId>
								<version>${hibernate.version}</version>
							</dependency>
							<dependency>
								<groupId>org.hibernate.orm</groupId>
								<artifactId>hibernate-envers</artifactId>
								<version>${hibernate.version}</version>
							</dependency>
							<dependency>
								<groupId>org.postgresql</groupId>
								<artifactId>postgresql</artifactId>
								<version>${postgresql.version}</version>
							</dependency>
							<dependency>
								<groupId>org.springframework.boot</groupId>
								<artifactId>spring-boot-starter-data-jpa</artifactId>
								<version>${project.parent.version}</version>
							</dependency>
							<dependency>
								<groupId>jakarta.validation</groupId>
								<artifactId>jakarta.validation-api</artifactId>
								<version>3.1.0</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>